# reddit-opportunity-radar

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: daily-digest.yml  hourly-scan.yml
reports/: 2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  (+59 more)
scripts/: daily_digest.py
src/radar/: __init__.py  __main__.py  consolidator.py  main.py  notifier.py  reddit_client.py  reporter.py  scorer.py  storage.py
