[project]
name = "reddit-opportunity-radar"
version = "0.1.0"
description = "每日自动扫描 Reddit 发现 App 开发机会（用户吐槽 / 明确需求 / 工具缺失）"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
radar = "radar.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar"]
